03Jun06=======================================================================
1. Added changes from Jim AD1C. 
02Apr06=======================================================================
1. incorporated cty-1604 data.
29Mar06=======================================================================
1. fix sh/muf that I broke in the previous change
26Mar06=======================================================================
1. Arrange for any online buddies to be displayed when a user logs on.
2. Try to reduce the amount of POSIX stuff that is loaded to just that which
is required.
23Mar06=======================================================================
1. Added cty-1603 data.
2. On the advice of Jim AD1C I have changed around some things in wpxloc.raw
that affect 8J,CT2,KC4,KG4,KG6,ZK1 and ZS2. These should now show the more 
likely canonical prefix.
3. On the advice of Tom WB8ZRL, I have made BW an alias for BV (Taiwan) and 
made some other changes to affect the selection between the mainland and the
island more reliable. 
10Mar06=======================================================================
1. fix sh/c/n.
2. Add new Spanish translations by Angel EA7WA.
07Mar06=======================================================================
1. Add the node call to remote tell_login and tell_buddie calls.
06Mar06=======================================================================
1. Fix warning on empty PC19s.
2. Add new command set/local_node to allow people to see logins/outs on other
related nodes.
3. Add new command set/buddy to allow people to see when their favorite 
chum(s) logins/out.
4. Arrange filter reading so that the following order is followed for users: 
callsign, callsign less ssid, user_default. Nodes are unchanged. 
14Feb06=======================================================================
1. Turn R and SFI around in mrtg.pl.
13Feb06=======================================================================