@@ -517,7 +517,7 @@ sub tell_buddies
 	
 	$call ||= $self->{call};
 	$call =~ s/-\d+$//;
-	my $s = $node ? "$node: $call" : $call;
+	$m .= 'n' if $node;
 	
 	# send info to all logged in thingies
 	my @dxchan = get_all_users();
@@ -525,7 +525,7 @@ sub tell_buddies
 	foreach $dxchan (@dxchan) {
 		next if $dxchan == $self;
 		next if $dxchan->{call} eq $main::mycall;
-		$dxchan->send($dxchan->msg($m, $s)) if grep $_ eq $call, @{$dxchan->{user}->{buddies}} ;
+		$dxchan->send($dxchan->msg($m, $call, $node)) if grep $_ eq $call, @{$dxchan->{user}->{buddies}} ;
 	}
 }
 
