@@ -168,7 +168,9 @@ package DXM;
 				lockoutun => '$_[0] Unlocked',
 				lockoutuse => 'usage: sh/lockout <call>|ALL',
 				loginb => 'Buddy $_[0] has logged in',
+				loginbn => 'Buddy $_[0] has logged in at $_[1]',
 				logoutb => 'Buddy $_[0] has logged out',
+				logoutbn => 'Buddy $_[0] has logged out from $_[1]',
 				loginu => 'User $_[0] has logged in',
 				logoutu => 'User $_[0] has logged out',
 				loginn => 'Node $_[0] has logged in',
